--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 #root{
   font-family: "Roboto", sans-serif;
   color: #207391;
+  background-color: #207391;
+}
+
+.fondoAutos{
+  background-color: #207391;
 }
